import React from 'react'
import { shallow, mount } from 'enzyme'

import Input from '../../Input'

global.Element = {}
global.console = {
  error: jest.fn(),
}

const onPressEnter = jest.fn()
const onKeyDown = jest.fn()
const onChange = jest.fn()
const onBlur = jest.fn()

describe('Input', () => {
  beforeEach(() => {
    global.console.error.mockClear()
    onPressEnter.mockClear()
    onKeyDown.mockClear()
    onChange.mockClear()
    onBlur.mockClear()
  })

  it('should match snapshot', () => {
    const wrapper = shallow(<Input id="test-input" name="test-input" />)

    expect(wrapper).toMatchSnapshot()
  })

  it('should match snapshot with an injected value in props', () => {
    const wrapper = shallow(
      <Input id="test-input" name="test-input" value="hello" />
    )

    expect(wrapper).toMatchSnapshot()
  })

  it('should have the prefix class', () => {
    const wrapper = shallow(<Input id="test-input" name="test-input" />)

    expect(wrapper.instance().classesPrefix).toEqual('to-input')
    expect(wrapper.hasClass(wrapper.instance().classesPrefix)).toEqual(true)
  })

  it('should contain the added classes', () => {
    const wrapper = shallow(
      <Input
        id="test-input"
        name="test-input"
        className="test-class-1 test-class-2"
      />
    )

    expect(wrapper.hasClass('test-class-1')).toEqual(true)
    expect(wrapper.hasClass('test-class-2')).toEqual(true)
  })

  it('should have the "focused" class when focus on input', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" onPressEnter={onPressEnter} />
    )
    wrapper
      .find('input')
      .last()
      .simulate('focus')

    expect(wrapper.render().hasClass('focused')).toEqual(true)

    wrapper.unmount()
  })

  it('should handle Enter key press correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" onPressEnter={onPressEnter} />
    )
    wrapper
      .find('input')
      .last()
      .simulate('keyDown', { keyCode: 13 })

    expect(onPressEnter).toBeCalled()

    wrapper.unmount()
  })

  it('should handle Key Down correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" onKeyDown={onKeyDown} />
    )
    wrapper
      .find('input')
      .last()
      .simulate('keyDown', { keyCode: 1 })

    expect(onKeyDown).toBeCalled()

    wrapper.unmount()
  })

  it('should handle onChange correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" onChange={onChange} />
    )
    const event = { target: { name: 'keyUp', value: 'test' } }
    wrapper
      .find('input')
      .last()
      .simulate('change', event)

    expect(onChange).toBeCalled()

    wrapper.unmount()
  })

  it('should handle onChange correctly when no function is passed', () => {
    const wrapper = mount(<Input id="test-input" name="test-input" />)
    const event = { target: { name: 'keyUp', value: 'test' } }
    wrapper
      .find('input')
      .last()
      .simulate('change', event)

    expect(onChange).not.toBeCalled()

    wrapper.unmount()
  })

  it('should handle onBlur correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" onBlur={onBlur} />
    )
    wrapper
      .find('input')
      .last()
      .simulate('blur')

    expect(onBlur).toBeCalled()

    wrapper.unmount()
  })

  it('should handle onBlur correctly when no function is passed', () => {
    const wrapper = mount(<Input id="test-input" name="test-input" />)
    wrapper
      .find('input')
      .last()
      .instance().value = 'Test'
    wrapper
      .find('input')
      .last()
      .simulate('blur')

    expect(onBlur).not.toBeCalled()
    expect(wrapper.state().value).toBe('Test')

    wrapper.unmount()
  })

  it('should console.error when no id is set', () => {
    shallow(<Input name="test-input" />)

    expect(global.console.error).toBeCalled()
  })

  it('should console.error when no name is set', () => {
    shallow(<Input id="test-input" />)

    expect(global.console.error).toBeCalled()
  })

  it('should not render a label by default', () => {
    const wrapper = shallow(<Input id="test-input" name="test-input" />)

    expect(wrapper.find('.to-input-label').length).toEqual(0)
  })

  it('should render a string label correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" label="Test label" />
    )

    expect(wrapper.find('Label').length).toEqual(1)
    expect(wrapper.find('Label').text()).toEqual('Test label')
    expect(wrapper.find('Label').getElement().props.htmlFor).toEqual(
      'test-input'
    )

    wrapper.unmount()
  })

  it('should render a component label correctly', () => {
    const wrapper = shallow(
      <Input id="test-input" name="test-input" label={<span>Test</span>} />
    )

    expect(wrapper.find('.to-input-label').length).toEqual(1)
    expect(wrapper.find('.to-input-label').find('span').length).toEqual(1)
    expect(
      wrapper
        .find('.to-input-label')
        .find('span')
        .text()
    ).toEqual('Test')
    expect(wrapper.find('.to-input-label').getElement().props.htmlFor).toEqual(
      'test-input'
    )
  })

  it('should not render an error by default', () => {
    const wrapper = shallow(<Input id="test-input" name="test-input" />)

    expect(wrapper.find('InputError').length).toEqual(0)
  })

  it('should render a string error correctly', () => {
    const wrapper = mount(
      <Input id="test-input" name="test-input" error="Test error" />
    )

    expect(wrapper.find('InputError').length).toEqual(1)
    expect(wrapper.find('InputError').text()).toEqual('Test error')

    wrapper.unmount()
  })

  it('should render a component error correctly', () => {
    const wrapper = shallow(
      <Input id="test-input" name="test-input" error={<span>Test</span>} />
    )

    expect(wrapper.find('InputError').length).toEqual(1)
    expect(wrapper.find('InputError').find('span').length).toEqual(1)
    expect(
      wrapper
        .find('InputError')
        .find('span')
        .text()
    ).toEqual('Test')
  })
})
